[gd_scene load_steps=9 format=2]

[ext_resource path="res://Themes/GUI_Default.tres" type="Theme" id=1]
[ext_resource path="res://Assets/FoodSprites/bettericecreamcone/together_48px.PNG" type="Texture" id=2]
[ext_resource path="res://Scenes/Options.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/BFXR_splat_01.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/PanoramaSky/A_pano_1.png" type="Texture" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.98324 )
colors = PoolColorArray( 0.192157, 0.133333, 0.266667, 1, 0.0784314, 0.270588, 0.321569, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
width = 1024
height = 600
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 1, 1 )

[sub_resource type="Theme" id=3]
HSlider/icons/grabber = ExtResource( 2 )
HSlider/icons/grabber_disabled = ExtResource( 2 )
HSlider/icons/grabber_highlight = ExtResource( 2 )

[node name="Options" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
light_mask = 4
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1024, 600 )
texture = SubResource( 2 )
expand = true

[node name="Light2D" type="Light2D" parent="TextureRect"]
position = Vector2( 512, 200 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
energy = 2.7
range_item_cull_mask = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
light_mask = 0
margin_left = 350.0
margin_right = 674.0
margin_bottom = 600.0
custom_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
light_mask = 0
margin_top = 124.0
margin_right = 324.0
margin_bottom = 147.0
text = "Music Volume"
align = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
light_mask = 0
margin_top = 159.0
margin_right = 324.0
margin_bottom = 207.0
theme = SubResource( 3 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label2" type="Label" parent="VBoxContainer"]
light_mask = 0
margin_top = 219.0
margin_right = 324.0
margin_bottom = 242.0
text = "Sound Effects Volume"
align = 1

[node name="SFXSlider" type="HSlider" parent="VBoxContainer"]
light_mask = 0
margin_top = 254.0
margin_right = 324.0
margin_bottom = 302.0
theme = SubResource( 3 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
light_mask = 0
margin_top = 314.0
margin_right = 324.0
margin_bottom = 346.0
text = "Speedrun Timer Visible"
align = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
light_mask = 0
margin_top = 358.0
margin_right = 324.0
margin_bottom = 398.0
rect_min_size = Vector2( 0, 40 )

[node name="Cancel" type="Button" parent="VBoxContainer"]
light_mask = 0
margin_top = 410.0
margin_right = 324.0
margin_bottom = 437.0
text = "Close"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
light_mask = 0
margin_top = 449.0
margin_right = 324.0
margin_bottom = 476.0
text = "Quit to Main Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.496
bus = "SFX"

[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/SFXSlider" to="." method="_on_SFXSlider_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="toggled" from="VBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="VBoxContainer/Cancel" to="." method="toggle_appearance"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
